# Iblu

./: .env.example  .gitignore  DEBUG_FINDINGS.md  DEPLOY_HANDOFF.md  HANDOFF.md  HANDOVER-voice.md  README.md  STATE.md  pyproject.toml  requirements.txt
dashboard/: app.py
db/: schema.sql
db/migrations/: .gitkeep
deploy/: Caddyfile  iblu-dashboard.service  iblu-mcp.service  nginx.conf.example
scripts/: connect_google.py  test_chat_access.py
src/iblu_keeper/: __init__.py  config.py  envelope.py  formatters.py  google_auth.py  google_errors.py  server.py
src/iblu_keeper/store/: __init__.py  drafts.py
src/iblu_keeper/tools/: __init__.py  calendar.py  chat.py  context.py  drive.py  gmail.py  infra.py
tests/: test_smoke.py
